update control flow

--- a/docs/codingchecklist/1.coding_checklist.md
+++ b/docs/codingchecklist/1.coding_checklist.md
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 01. Coding checklist
+title: 01. Android Coding checklist
 nav_order: 50
 has_children: true
 ---
 
-01. Coding checklist
+01. Android Coding checklist
